# sgemm

./: .gitignore  CMakeLists.txt  README.md  my_sgemm_v0_global_mem.cu  my_sgemm_v1_shared_mem.cu  my_sgemm_v2_shared_mem_tiling.cu  my_sgemm_v3_increase_work_per_thread.cu  my_sgemm_v4_float4.cu  my_sgemm_v5_register_with_outer_product.cu  my_sgemm_v6_register_with_outer_product_float4.cu  my_sgemm_v7_smem_transpose.cu
